🎨 Fixed Sonar issues